# controller/c_user/c_user.go
@@ -67,6 +67,47 @@ func GetUser(c *gin.Context) {
 	valid.Required(id, "id").Message("Id不能为空！")
 	valid.Min(id, 1, "id").Message("Id必须大于0！")
 
+	if valid.HasErrors() {
+		appGin.ResponseInvalidParams(nil)
+		return
+	}
+
+	// 查询并返回
+
+	if user, err := s_user.FindUserById(id); err != nil {
+		appGin.ResponseFail(err.Error())
+	} else {
+		appGin.ResponseSuccess(user)
+	}
+
+}
+
+// @Tags APP相关
+// @Resource Name
+// @Summary 按ID 获取用户
+// @Accept json
+// @Produce json
+// @Param id path string true "id"
+// @Param token query string true "token"
+// @Success 200 {object} app.Response
+// @Failure 400 {object} app.Response
+// @Failure 500 {object} app.Response
+// @Router /app/user/get/{id} [GET]
+func GetAppUser(c *gin.Context) {
+	appGin := app.Gin{C: c}
+	// 取值
+	id, _ := com.StrTo(c.Param("id")).Int()
+
+	// 校验
+	valid := validation.Validation{}
+	valid.Required(id, "id").Message("Id不能为空！")
+	valid.Min(id, 1, "id").Message("Id必须大于0！")
+
+	if valid.HasErrors() {
+		appGin.ResponseInvalidParams(nil)
+		return
+	}
+
 	// 查询并返回
 
 	if user, err := s_user.FindUserById(id); err != nil {
@@ -93,6 +134,7 @@ func ListUser(c *gin.Context) {
 	userForm := ListUserForm{}
 	if c.BindJSON(&userForm) != nil {
 		appGin.ResponseInvalidParams(nil)
+		return
 	}
 
 	user := m_user.User{
@@ -226,7 +268,7 @@ func RemoveUser(c *gin.Context) {
 	valid.Min(id, 1, "id").Message("Id必须大于0！")
 
 	appGin := app.Gin{C: c}
-	if valid.Errors != nil {
+	if valid.HasErrors() {
 		appGin.ResponseInvalidParams(nil)
 		logging.Info(valid.Errors[0].Message)
 		return
